--- a/index.html
+++ b/index.html
@@ -14,9 +14,48 @@
   <body>
     <div class="container">
       <div class="jumbotron">
+        <div class="heading1">
+          <h1></h1>
+        </div>
+      </div>
+      <!-- jumbotron wrap -->
+      <div class="row">
+        <div class="col-md-12">
+          <div class="well">   
 
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="well">
+
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="well">
+
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="well">
+
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="well">
+
+          </div>
+        </div>
       </div>
     </div>
+    <!-- container class wrap -->
   <script  src="js/scripts.js"></script>
   </body>
 </html>
