add css radio buttons  quiz

--- a/index.html
+++ b/index.html
@@ -51,75 +51,75 @@
               <li id="question1">Which of the following is a <strong>JavaScript</strong> output method</li>
                    <div class="radio">
                     <label>
-                      <input type="radio" name="*" value="markup language" required>
+                      <input type="radio" name="js1" value="markup language" required>
                       alert ( );
                     </label>
                    </div>
                     <div class="radio">
                       <label>
-                        <input type="radio" name="*" value="hyper text language">
+                        <input type="radio" name="js1" value="hyper text language">
                         find ( );
                       </label>
                     </div>
                     <div class="radio">
                       <label>
-                        <input type="radio" name="*" value="hyper text markup language">
+                        <input type="radio" name="js1" value="hyper text markup language">
                         prompt ( );
                       </label>
                     </div>
                     <div class="radio">
                       <label>
-                        <input type="radio" name="*" value="hyper markup language">
+                        <input type="radio" name="js1" value="hyper markup language">
                         Search ( );
                       </label>
                     </div>
               <li id="question2">Which of the following is a <strong>JavaScript</strong> output method</li>
                    <div class="radio">
                     <label>
-                      <input type="radio" name="definition" value="markup language">
+                      <input type="radio" name="j2" value="markup language">
                       alert ( );
                     </label>
                    </div>
                     <div class="radio">
                       <label>
-                        <input type="radio" name="definition" value="hyper text language">
+                        <input type="radio" name="js2" value="hyper text language">
                         find ( );
                       </label>
                     </div>
                     <div class="radio">
                       <label>
-                        <input type="radio" name="definition" value="hyper text markup language">
+                        <input type="radio" name="js2" value="hyper text markup language">
                         prompt ( );
                       </label>
                     </div>
                     <div class="radio">
                       <label>
-                        <input type="radio" name="definition" value="hyper markup language">
+                        <input type="radio" name="js2" value="hyper markup language">
                         Search ( );
                       </label>
                     </div>
               <li id="question3">Which of the following is a <strong>JavaScript</strong> output method</li>
                    <div class="radio">
                     <label>
-                      <input type="radio" name="definition" value="markup language">
+                      <input type="radio" name="js3" value="markup language">
                       alert ( );
                     </label>
                    </div>
                     <div class="radio">
                       <label>
-                        <input type="radio" name="definition" value="hyper text language">
+                        <input type="radio" name="js3" value="hyper text language">
                         find ( );
                       </label>
                     </div>
                     <div class="radio">
                       <label>
-                        <input type="radio" name="definition" value="hyper text markup language">
+                        <input type="radio" name="js3" value="hyper text markup language">
                         prompt ( );
                       </label>
                     </div>
                     <div class="radio">
                       <label>
-                        <input type="radio" name="definition" value="hyper markup language">
+                        <input type="radio" name="js3" value="hyper markup language">
                         Search ( );
                       </label>
                     </div>
